--- a/public_html/M3/problem1.html
+++ b/public_html/M3/problem1.html
@@ -25,7 +25,7 @@
     </script>
     <style>
         /* TODO: make edits here */
-        li { margin: 0; padding: 0; list-style-type: "✓";}
+        h3+ul li { margin: 0; padding: 0; list-style-type: "✓";}
 
         body {background-color: mediumspringgreen;}
         h1   {color:blue;}
@@ -48,12 +48,8 @@
         a:active { COLOR: black; TEXT-DECORATION: none; font-weight: normal }
         a:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }
 
-        div, a {
-            text-transform: capitalize;
-        }
-        div, h1 {
-            text-transform: capitalize;
-        }
+        div, a { text-transform: capitalize;}
+        div, h1 { text-transform: capitalize;}
 
     </style>
     <!-- make the necessary edits above this line -->
